# fintech-fraud-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  batch_analysis.py  generate_test_data.py  score_transaction.py
knowledge_base/: fraud_patterns.json
src/fraud_agent/: __init__.py  cli.py  config.py  db.py
src/fraud_agent/agents/: __init__.py  analyzer.py  decision.py  orchestrator.py  state.py  triage.py
src/fraud_agent/api/: __init__.py  grpc_client.py  grpc_server.py  rest.py  schemas.py
src/fraud_agent/data/: __init__.py  generator.py  knowledge_base.py  schemas.py
src/fraud_agent/guardrails/: __init__.py  audit_logger.py  compliance.py  pii_masker.py
src/fraud_agent/monitoring/: __init__.py  dashboard.py  metrics.py
src/fraud_agent/proto/: fraud_scoring.proto
src/fraud_agent/rag/: __init__.py  embeddings.py  retriever.py  store.py
src/fraud_agent/scoring/: __init__.py  engine.py  features.py  models.py  rules.py
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_knowledge_base.py  test_monitoring.py
tests/test_agents/: test_agents.py  test_analyzer.py  test_decision.py  test_orchestrator.py  test_triage.py
tests/test_api/: test_rest.py
tests/test_data/: test_generator.py  test_schemas.py
tests/test_guardrails/: test_audit_logger.py  test_pii_masker.py
tests/test_rag/: test_rag.py  test_retriever.py
tests/test_scoring/: test_engine.py  test_features.py  test_models.py  test_rules.py
