[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fraud-agent"
version = "0.1.0"
description = "Agentic fraud detection system for financial services"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "George Castillo" }]
keywords = ["fraud-detection", "agents", "fintech", "langgraph", "grpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
fraud-agent = "fraud_agent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF005", "RUF001", "RUF002", "RUF003", "RUF012", "RUF022", "RUF046", "B017", "B905", "N806", "UP042", "SIM102", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"**/grpc_server.py" = ["N802"]
"**/grpc_client.py" = ["N802"]

[tool.ruff.lint.isort]
known-first-party = ["fraud_agent"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
